--- a/Local Server/Demo/broker_config.yaml
+++ b/Local Server/Demo/broker_config.yaml
@@ -3,7 +3,7 @@ listeners:
     max-connections: 100
     type: tcp
   tcp1:
-    bind: localhost:1883
+    bind: 192.168.1.2:1883
 
 auth:
   allow-anonymous: true
