Added the database layer code and integrated it in main

--- a/Local Server/requirements.txt
+++ b/Local Server/requirements.txt
@@ -6,3 +6,5 @@ setuptools
 # Asynchronous HTTP Library https://docs.aiohttp.org/en/stable/
 # This will be used to connect to the remote api
 aiohttp
+
+aiosqlite
